--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.0",
-    "recharts": "^x.x.x"
+    "reactstrap": "^9.2.3",
+    "recharts": "^2.14.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
